2012-12-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el (mime-pgp-decrypted-buffers): New variable.
	(mime-pgp-kill-decrypted-buffers): New function.
	(mime-preview-application/pgp-encrypted): Keep decrypted content
	until the preview buffer is killed.

	* mime-view.el (mime-display-entity): Do not propertize with
	mime-view-* properties on already propertized region.

2012-12-23  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* semi-def.el (mime-add-condition): Define autoload for method and
	body-presentation-method's parameter.

	* semi-setup.el: Use mime-add-condtion for preview functions that
	require autoload.

2012-12-22  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* semi-setup.el: Remove settings for mime-view-application/pgp
	function.  SEMI-EPG does not have this funciton.

2012-12-22  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el: Require mmgeneric.el in compiling.
	(mime-preview-application/pgp-encrypted): New function. Imported
	and modified from Wanderlust.

	* semi-setup.el: Add setting for
	mime-preview-application/pgp-encrypted.

2012-12-21  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-shr.el (mime-shr-blocked-images): Change its customization
	gorup to mime-view.

2012-12-19  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-view-multipart-show-all-children): New
	customizable variable.
	(mime-display-multipart/related): Refer to it.

	* mime-pgp.el (mime-display-multipart/pgp-encrypted): Likewise.

2012-12-18  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el (mime-pgp-decrypt-when-preview): New customizable
	variable.
	(mime-display-multipart/pgp-encrypted): New function.

	* semi-setup.el: Define autoload and mime-preview-codition's
	settings for mime-display-multipart/pgp-encrypted.

2012-12-18  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-encrypt-pgp-nonmime): New function.

2012-10-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el: Use mapc instead of mapcar for side effect.