@@ -1,3 +1,15 @@
+2013-02-11  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* SEMI-ELS (semi-modules-to-compile): Add mime-signature.el.
+
+	* mime-edit.el: Do not require signature.el
+	(mime-edit-insert-signature): Moved to mime-signature.el and
+	define atuload for it.
+
+	* mime-signature.el: New file.
+
+	* semi-setup.el (mime-setup-use-signature): Now nil is default.
+
 2012-12-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mime-pgp.el (mime-pgp-decrypted-buffers): New variable.
